--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -6,7 +6,7 @@
 	<div class="footer_content">
 		<div class="footer-body">
 			<div class="footerInner">
-				<div class="address-container salem" style="color: red;">
+				<div class="address-container salem" style="color: red">
 					<h1>H.O-Salem</h1>
 					<div>
 						<span
@@ -20,9 +20,11 @@
 									fill-rule="evenodd"
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
-								/></svg></span>
-						<div class="address" style="font-weight: bolder;">
-							1/1, First Floor, PS Square, SKS Hospital Road, Opp. Ponnusamy Gounder Kalyana Mandapam, Salem- 636004
+								/></svg
+						></span>
+						<div class="address" style="font-weight: bolder">
+							1/1, First Floor, PS Square, SKS Hospital Road, Opp. Ponnusamy
+							Gounder Kalyana Mandapam, Salem- 636004
 						</div>
 					</div>
 					<span class="mobspan s1"
@@ -36,7 +38,9 @@
 								d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
 							/>
 						</svg>
-						<span class="num" style="font-weight: bolder; ">&nbsp; +91-78670 14165</span>
+						<span class="num" style="font-weight: bolder"
+							>&nbsp; +91-78670 14165</span
+						>
 					</span>
 				</div>
 				<div class="address-container">
@@ -53,7 +57,8 @@
 									fill-rule="evenodd"
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
-								/></svg></span>
+								/></svg
+						></span>
 						<div class="address">
 							84-B/5, Third Floor, S.S Complex (Ramesh Theatre Bus Stop),Trichy
 							Road, Namakkal - 637002
@@ -87,7 +92,8 @@
 									fill-rule="evenodd"
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
-								/></svg></span>
+								/></svg
+						></span>
 						<div class="address">
 							5-A1, Narasimma Achari Street, Town BSNL office Back Side,
 							Dharmapuri - 636701
@@ -121,7 +127,8 @@
 									fill-rule="evenodd"
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
-								/></svg></span>
+								/></svg
+						></span>
 						<div class="address">
 							No: 7/2, First Floor AL- Noor Complex, Palathorom Street, Katpadi
 							Road /New Bye Pass Road, Vellore- 632004
