--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -175,9 +175,9 @@
 			<div class="pagination">
 				<section class="galleryMain tableList"></section>
 				<div class="pagination-block">
-					<span class="pageButton outline-none" id="button_prev">Prev</span>
+					<span class="pageButton outline-none" id="button_prev"><</span>
 					<span id="page_number" class="outline-none"></span>
-					<span class="pageButton outline-none" id="button_next">Next</span>
+					<span class="pageButton outline-none" id="button_next">></span>
 				</div>
 			</div>
 		</section>
