--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -628,6 +628,7 @@ option:hover {
 	font-weight: 600;
 	margin: 2rem 0rem 0rem 0rem;
 	padding: 0 1rem;
+	-webkit-appearance: none;
 }
 
 #pagination-container {
