--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -628,9 +628,26 @@ option:hover {
 	font-weight: 600;
 	margin: 2rem 0rem 0rem 0rem;
 	padding: 0 1rem;
-	-webkit-appearance: none;
+	padding-right: 2rem;
+	overflow: hidden;
+	-webkit-appearance: menulist;
 }
 
+.dropdownNeet::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: 'v';
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+.arrdown {
+	transform: rotate(90deg);
+}
 #pagination-container {
 	margin: 2rem 0;
 }
