--- a/views/admin/home/loadingimg.ejs
+++ b/views/admin/home/loadingimg.ejs
@@ -5,21 +5,62 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
-		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="../../images/home/classic-nee-tacademy-logo.png"
+			type="image/x-icon"
+		/>
 		<link rel="stylesheet" href="../../stylesheets/sliderrevolution.css" />
-    <link rel="stylesheet" href="../../stylesheets/admin.css" />
+		<link rel="stylesheet" href="../../stylesheets/admin.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<style>
+			.preview {
+				position: fixed;
+				height: 100vh;
+				width: 100%;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -41%);
+				display: none;
+				z-index: 5;
+				justify-content: center;
+				align-items: center;
+				z-index: 3;
+			}
+
+			.preview img {
+				justify-content: center;
+				align-items: center;
+				height: 60%;
+				width: 60%;
+				object-fit: contain;
+			}
+
+			.closesvg {
+				position: absolute;
+				cursor: pointer;
+				right: 25%;
+				top: 14%;
+				z-index: 5;
+				text-align: center;
+			}
+			.closesvg img {
+				width: 100%;
+				z-index: 5;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="preview">
-			<span class="closesvg" style="z-index: 10; height: 100px;width: 200px; right: 18%; top: 7%;">
+			<span class="closesvg" style="z-index: 10">
 				<img
-				style="z-index: 10;" src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
+					style="z-index: 10"
+					src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/>
 				<h5 class="closeText">Close</h5>
 			</span>
@@ -28,7 +69,6 @@
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
-        
 				<form
 					action="
 					/admin/loadingimg?_method=PUT"
@@ -53,6 +93,7 @@
 									<span
 										class="currentPreviewSpan btn btn-info"
 										onclick="currentPreviewSpan(this)"
+										type="button"
 										>Show Image</span
 									>
 									<span class="currentSliderimgurl"><%= i.sliderimg %> </span>
@@ -69,6 +110,7 @@
 									<button
 										class="previewSpan displaybtn btn"
 										onclick="previewSpanClick(this)"
+										type="button"
 										disabled
 									>
 										Display
@@ -98,23 +140,23 @@
 						Submit
 					</button>
 				</form>
-        <form
-          action="/admin/loadingimg"
-          method="post"
-          class="imgform latestupdateform toogleform"
-        >
-          <div>
-            Image State (<span class="loadingspan"
-              ><%= (state === "active")? "Active": "Inactive"%></span
-            >)
-          </div>
+				<form
+					action="/admin/loadingimg"
+					method="post"
+					class="imgform latestupdateform toogleform"
+				>
+					<div>
+						Image State (<span class="loadingspan"
+							><%= (state === "active")? "Active": "Inactive"%></span
+						>)
+					</div>
 
-          <label class="switch">
-            <input type="checkbox" class="toggleswitch" <%= (state === "active")
-            ? "checked": "" %>>
-            <span class="slider round"></span>
-          </label>
-        </form>
+					<label class="switch">
+						<input type="checkbox" class="toggleswitch" <%= (state === "active")
+						? "checked": "" %>>
+						<span class="slider round"></span>
+					</label>
+				</form>
 			</div>
 		</section>
 		<script
@@ -137,7 +179,6 @@
 			const previewDiv = document.querySelector('.preview');
 			const closesvg = document.querySelector('.closesvg');
 			const submitbtn = document.querySelector('.submit');
-
 			const uploadDisplayInput = (e) => {
 				e.parentNode.parentNode.children[2].children[0].removeAttribute(
 					'disabled'
@@ -160,7 +201,6 @@
 					submitbtn.classList.add('warningcheck');
 				}
 			};
-
 			const nocontentswal = () => {
 				Swal.fire({
 					position: 'center',
@@ -179,7 +219,6 @@
 					timer: 2500
 				});
 			};
-
 			submitbtn.addEventListener('click', () => {
 				if (
 					submitbtn.getAttribute('type') == 'button' &&
@@ -195,7 +234,6 @@
 					return;
 				}
 			});
-
 			const updatesCheckboxChange = (e) => {
 				if (
 					document.querySelectorAll('input[type="checkbox"]:checked').length
@@ -218,7 +256,6 @@
 					previewDiv.style.background = 'none';
 				});
 			};
-
 			const currentPreviewSpan = (e) => {
 				const img = document.createElement('img');
 				img.src = e.parentNode.children[2].innerText;
