21-01-2022 02:29pm push changes

--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -213,7 +213,7 @@
               <tr>
                 <th scope="col">Name</th>
                 <th scope="col">Image</th>
-                <th scope="col">College Name</th>
+                <th scope="col">Mark</th>
                 <th scope="col">Update</th>
                 <th scope="col">Year</th>
                 <th scope="col">Edit</th>
